--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "host": "vite --host",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "emoji-picker-react": "^4.12.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
